@@ -3,6 +3,7 @@ package com.banhauniversity.sidalih;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.web.cors.CorsConfiguration;
@@ -17,28 +18,26 @@ import java.util.List;
 @EnableScheduling
 public class SidalihApplication {
 
-	@Value("react")
-	private String react;
-
 	public static void main(String[] args) {
 
 		SpringApplication.run(SidalihApplication.class, args);
 	}
-
 	@Bean
-	public CorsFilter corsFilter() {
+	public FilterRegistrationBean<CorsFilter> corsFilter() {
 		CorsConfiguration corsConfiguration = new CorsConfiguration();
 		corsConfiguration.setAllowCredentials(true);
-		corsConfiguration.setAllowedOrigins(List.of("http://localhost:5173","http://127.0.0.1:5173", "https://master--benha-e-pharmacy.netlify.app","http://52.58.254.253","http://3.72.140.173","https://3.72.140.173","https://52.58.254.253"));
+		corsConfiguration.setAllowedOrigins(Arrays.asList("http://192.168.107.74:5173")); // Allow requests from any origin
 		corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
 				"Accept", "Authorization", "Origin, Accept", "X-Requested-With",
 				"Access-Control-Request-Method", "Access-Control-Request-Headers"));
 		corsConfiguration.setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization",
 				"Access-Control-Allow-Origin", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
 		corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-		UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-		urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-		return new CorsFilter(urlBasedCorsConfigurationSource);
-	}
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", corsConfiguration);
 
+		FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
+		bean.setOrder(0); // Set the CORS filter to be the first in the filter chain
+		return bean;
+	}
 }
